updates check your answers page

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -33,6 +33,22 @@ $govuk-assets-path: '/govuk/assets/';
     display: none;
 }
 
+#gov-07-error.hidden {
+    display: none;
+}
+
+#gov-08-error.hidden {
+    display: none;
+}
+
+#gov-09-error.hidden {
+    display: none;
+}
+
 .inline-block {
     display: inline-block
+}
+
+.summaries.hide {
+    display: none;
 }
