--- a/app/views/1-0-0/gov-03.html
+++ b/app/views/1-0-0/gov-03.html
@@ -75,7 +75,9 @@
     
 
       <h1 class="govuk-heading-l">
-        A total of <span id="totalGovernors"></span> board members are recorded
+        <span id="totalGovernors"></span>
+        
+
       </h1>
       
       <!-- <span id="newTotalGovernors"></span> -->
