--- a/app/views/1-0-0/gov-06.html
+++ b/app/views/1-0-0/gov-06.html
@@ -115,7 +115,7 @@
 
 <div class="govuk-visually-hidden">
     <h1 class="govuk-heading-l">
-      A total of <span id="totalGovernors">12</span> board members are recorded
+      A total of <span id="totalGovernors"></span> board members are recorded
     </h1>
     
     <p class="govuk-body">Board representation:</p>
