--- a/app/views/1-0-0/gov-10.html
+++ b/app/views/1-0-0/gov-10.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
            
-           
+        <form method="get" class="form">    
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
@@ -23,14 +23,14 @@
           </div>
           <div class="govuk-radios govuk-radios--inline">
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="changed-name" name="changed-name" type="radio" value="yes">
-              <label class="govuk-label govuk-radios__label" for="changed-name">
+              <input class="govuk-radios__input" id="open-vacancies" name="open-vacancies" type="radio" value="yes~/1-0-0/gov-11">
+              <label class="govuk-label govuk-radios__label" for="open-vacancies">
                 Yes
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="changed-name-2" name="changed-name" type="radio" value="no">
-              <label class="govuk-label govuk-radios__label" for="changed-name-2">
+              <input class="govuk-radios__input" id="open-vacancies-2" name="open-vacancies" type="radio" value="no~/1-0-0/gov-12">
+              <label class="govuk-label govuk-radios__label" for="open-vacancies-2">
                 No
               </label>
             </div>
@@ -41,10 +41,10 @@
 
 
 
-          <a href="gov-11.html" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
+          <button role="button" draggable="false" class="govuk-button" data-module="govuk-button">
             Save and continue
-          </a>
-
+          </button>
+          </form>
     </div>
 
    
