--- a/app/views/1-0-0/start.html
+++ b/app/views/1-0-0/start.html
@@ -2,10 +2,11 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  GOV.UK Prototype Kit
+FE Workforce - Start
 {% endblock %}
 
 {% block content %}
+
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
