--- a/app/views/1-0-0/gov-09.html
+++ b/app/views/1-0-0/gov-09.html
@@ -13,6 +13,22 @@
 
     <div class="govuk-grid-column-two-thirds">
 
+        <div id="gov-09-error" class="govuk-error-summary hidden" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+            <h2 class="govuk-error-summary__title" id="error-summary-title">
+              There is a problem
+            </h2>
+            <div class="govuk-error-summary__body">
+              <ul class="govuk-list govuk-error-summary__list">
+                <li>
+              <a href="#passport-issued-day">The total number for ethnic groups must be the same as the number of board members. Enter ethnic group figures that are equal to <span id="totalGovernors"></span> (the number of board members)</a>
+                </li>
+                <!-- <li>
+                  <a href="#postcode-input">Enter a postcode, like AA1 1AA</a>
+                </li> -->
+              </ul>
+            </div>
+          </div>
+
       
             {% include "./includes/gov_data_tag.html" %}  
 
@@ -21,7 +37,7 @@
       </h1>
       
       <p class="govuk-body">Enter figures accounting for all board members.</p>
-      <form action="gov-10" method="post" class="form">
+      <form action="" method="post" class="form">
       <div class="govuk-form-group">
         <label class="govuk-label govuk-label--m" for="ltoy">
           Less than 1 year served
@@ -57,14 +73,44 @@
         <input class="govuk-input govuk-input--width-5" id="over12" name="over12" type="text" value="{{ data['over12'] }}">
       </div>
       
-      <button role="button" draggable="false" class="govuk-button" data-module="govuk-button">
-        Save and continue
-      </button>
-      </form>
+      
+
+      <div class="govuk-button-group">
+        <button id="timeServedButton" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
+            Save and continue
+          </button>
+        <button id="timeServedButtonExit" role="button" draggable="false" class="govuk-button govuk-button--secondary" data-module="govuk-button">
+            Save and exit
+        </button>
+      </div>
+
+    </form>
 
     </div>
 
    
   </div>
+
+  <div class="govuk-visually-hidden">
+      <h1 class="govuk-heading-l">
+        A total of <span id="totalGovernors"></span> board members are recorded
+      </h1>
+      
+      <p class="govuk-body">Board representation:</p>
+      <ul class="govuk-list govuk-list--bullet">
+          <li>
+              <span id="staffGovernors">{{ data['staff-governors'] }}</span> Staff governors
+          </li>
+          <li>
+              <span id="studentGovernors">{{ data['student-governors'] }}</span> Student governors
+          </li>
+          <li>
+              <span id="independantGovernors">{{ data['independent-governors'] }}</span> Independent governors
+          </li>
+          <li>
+              <span id="parentGovernors">{{ data['parent-governors'] }}</span> Parent governors
+          </li>     
+      </ul>
+    </div>
 
 {% endblock %}
