--- a/app/views/index.html
+++ b/app/views/index.html
@@ -2,7 +2,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  GOV.UK Prototype Kit
+  FE Workforce versions
 {% endblock %}
 
 {% block content %}
@@ -16,6 +16,7 @@
       
       <table class="govuk-table">
         <caption class="govuk-table__caption visually-hidden">List of versions</caption>
+        <!-- <caption class="govuk-table__caption visually-hidden">Journey set to: <span id="journey"></span> </caption> -->
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
             <th class="govuk-table__header" scope="col">Version</th>
