--- a/app/views/1-0-0/gov-06.html
+++ b/app/views/1-0-0/gov-06.html
@@ -17,7 +17,7 @@
             <div class="govuk-error-summary__body">
               <ul class="govuk-list govuk-error-summary__list">
                 <li>
-              <a href="#passport-issued-day">The total number for gender representation must be the same as the number of board members. Enter age range figures that are equal to <span id="totalGovernors"></span> (the number of board members)</a>
+              <a href="#passport-issued-day">The total number for age ranges must be the same as the number of board members. Enter age range figures that are equal to <span id="totalGovernors"></span> (the number of board members)</a>
                 </li>
                 <!-- <li>
                   <a href="#postcode-input">Enter a postcode, like AA1 1AA</a>
@@ -79,14 +79,14 @@
       
       <div class="govuk-form-group">
         <label class="govuk-label govuk-label--m" for="65">
-          65 to 75 years
+          65 to 74 years
         </label>
         <input class="govuk-input govuk-input--width-5" id="65" name="65" type="text" value="{{ data['65'] }}">
       </div>
       
       <div class="govuk-form-group">
         <label class="govuk-label govuk-label--m" for="76">
-          76 years or over
+          75 years or over
         </label>
         <input class="govuk-input govuk-input--width-5" id="76" name="76" type="text" value="{{ data['76'] }}">
       </div>
