--- a/app/views/1-0-0/gov-08.html
+++ b/app/views/1-0-0/gov-08.html
@@ -180,6 +180,8 @@
         <input class="govuk-input govuk-input--width-5" id="other-ethnic" name="other-ethnic" type="text" value="{{ data['other-ethnic'] }}">
       </div>
       
+
+      <h2 class="govuk-heading-m">Does not wish to delace ethnicity</h2>
       <div class="govuk-form-group">
         <label class="govuk-label" for="ethnicity-pnts">
           Prefer not to say
