--- a/app/views/1-0-0/gov-11.html
+++ b/app/views/1-0-0/gov-11.html
@@ -22,7 +22,7 @@
       <p class="govuk-body">Record governor vacancies for academic year 2020 to 2021. </p>
        <p> Include all governor vacancies that were open at the beginning of, or occurred during the academic year.</p>
      
-       <form action="gov-12" method="post" class="form">
+       <form id="vacancyInputGroup" action="gov-12" method="post" class="form">
 
       <div class="govuk-form-group">
         <label class="govuk-label govuk-label--m" for="vacancies">
