--- a/app/views/1-0-0/gov-03.html
+++ b/app/views/1-0-0/gov-03.html
@@ -9,6 +9,22 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+
+        <div id="gov-03-error" class="govuk-error-summary hidden" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+            <h2 class="govuk-error-summary__title" id="error-summary-title">
+              There is a problem
+            </h2>
+            <div class="govuk-error-summary__body">
+              <ul class="govuk-list govuk-error-summary__list">
+                
+                <li>
+                  <a id="errorMessageNumber" href="#">Enter a numeric value</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+
               {% include "./includes/gov_data_tag.html" %}  
 
         <h1 class="govuk-heading-l">
@@ -18,7 +34,7 @@
         <p>Enter figures for current board members. Do not include co-opted governors.</p>
        
 
-      <form id="onInputChange" action="gov-04" method="post" class="form">
+      <form id="onInputChange" action="" method="post" class="form">
 
         <div class="govuk-form-group">
           <label class="govuk-label govuk-label--m" for="staff-governors">
@@ -27,17 +43,23 @@
           <div id="account-number-hint" class="govuk-hint">
             Include executive (ex-officio), principal or chief executive and other staff members who are governors
           </div>
-          <input class="govuk-input govuk-input--width-5" id="staff-governors" name="staff-governors" type="text" value="{{ data['staff-governors'] }}">
+          <span class="govuk-error-message hidden">
+            <span class="govuk-visually-hidden">Error:</span>Enter a numeric value  
+          </span>
+          <input class="govuk-input govuk-input--width-5" id="staff-governors" name="staff-governors" type="text" inputmode="numeric" value="{{ data['staff-governors'] }}">
         </div>
         
         <div class="govuk-form-group">
           <label class="govuk-label govuk-label--m" for="student-governors">
-            Student governors
+            Student governors 
           </label>
           <div id="account-number-hint" class="govuk-hint">
             Include part-time students if applicable
           </div>
-          <input class="govuk-input govuk-input--width-5" id="student-governors" name="student-governors" type="text" value="{{ data['student-governors'] }}">
+          <span class="govuk-error-message hidden">
+              <span class="govuk-visually-hidden">Error:</span>Enter a numeric value  
+            </span>
+          <input class="govuk-input govuk-input--width-5" id="student-governors" name="student-governors" type="text" inputmode="numeric" value="{{ data['student-governors'] }}">
         </div>
         
         <div class="govuk-form-group">
@@ -47,7 +69,10 @@
           <div id="account-number-hint" class="govuk-hint">
             Not a member of staff, student or parent at the organisation
           </div>
-          <input class="govuk-input govuk-input--width-5" id="independent-governors" name="independent-governors" type="text" value="{{ data['independent-governors'] }}">
+          <span class="govuk-error-message hidden">
+              <span class="govuk-visually-hidden">Error:</span>Enter a numeric value  
+            </span>
+          <input class="govuk-input govuk-input--width-5" id="independent-governors" name="independent-governors" type="text" inputmode="numeric" value="{{ data['independent-governors'] }}">
         </div>
 
         <div class="govuk-form-group">
@@ -57,7 +82,10 @@
           <div id="account-number-hint" class="govuk-hint">
             Parent of a learner at the organisation. Not a member of staff or a student at the organisation
           </div>
-          <input class="govuk-input govuk-input--width-5" id="parent-governors" name="parent-governors" type="text" value="{{ data['parent-governors'] }}">
+          <span class="govuk-error-message hidden">
+              <span class="govuk-visually-hidden">Error:</span>Enter a numeric value  
+            </span>
+          <input class="govuk-input govuk-input--width-5" id="parent-governors" name="parent-governors" type="text" inputmode="numeric" value="{{ data['parent-governors'] }}">
         </div>
 
           <button id="continueTotal" class="govuk-button" data-module="govuk-button">Continue</button>
