--- a/app/views/1-0-0/gov-04.html
+++ b/app/views/1-0-0/gov-04.html
@@ -7,8 +7,37 @@
 
 {% block content %}
 
+<div id="gov04CheckRadio" class="govuk-error-summary hidden" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+    <h2 class="govuk-error-summary__title" id="error-summary-title">
+      There is a problem
+    </h2>
+    <div class="govuk-error-summary__body">
+      <ul class="govuk-list govuk-error-summary__list">
+        <li>
+          <a href="#gov-04-error-for-input">Select if the total number of board members is correct or not </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <div id="dataClearWarning" class="govuk-notification-banner hidden" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
+      <div class="govuk-notification-banner__header">
+        <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
+          Important
+        </h2>
+      </div>
+      <div class="govuk-notification-banner__content">
+        <p class="govuk-notification-banner__heading">
+            Some data will be cleared and required to be entered again to tally with the new number of board members.
+          <!-- <a class="govuk-notification-banner__link" href="#">View application</a>. -->
+        </p>
+      </div>
+    </div>
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+
+
               {% include "./includes/gov_data_tag.html" %}  
 
         <h1 class="govuk-heading-l">
@@ -32,23 +61,28 @@
       </ul>
       <form method="get" class="form">
         <div class="govuk-form-group">
-          <fieldset class="govuk-fieldset">
+          <fieldset class="govuk-fieldset" aria-describedby="nationality-hint nationality-error">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
               <h2 class="govuk-fieldset__heading">
                 Is this the correct number of board members?
               </h2>
             </legend>
+
+            <span id="gov-04-error-for-input" class="govuk-error-message hidden">
+              <span class="govuk-visually-hidden">Error:</span> Select if the total number of board members is correct or not
+            </span>
+
             <div class="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="test" name="test" type="radio" value="yes~/1-0-0/gov-05">
-                <label class="govuk-label govuk-radios__label" for="test">
+                <input class="govuk-radios__input" id="correct-number" name="correct-number" type="radio" value="yes~gov-05">
+                <label class="govuk-label govuk-radios__label" for="correct-number">
                   Yes, it's the correct number
                 </label>
               </div>
 
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="test-2" name="test" type="radio" value="no~/1-0-0/gov-03">
-                <label class="govuk-label govuk-radios__label" for="test-2">
+                <input class="govuk-radios__input" id="correct-number-2" name="correct-number" type="radio" value="no~gov-03">
+                <label class="govuk-label govuk-radios__label" for="correct-number-2">
                   No, I want to make changes
                 </label>
               </div>
@@ -58,7 +92,7 @@
           </fieldset>
         </div>
 
-        <button role="button" draggable="false" class="govuk-button" data-module="govuk-button">
+        <button id="gov04Button" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
           Save and continue
         </button>
       </form>
