--- a/app/views/1-0-0/gov-10.html
+++ b/app/views/1-0-0/gov-10.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
            
-        <form method="get" class="form">    
+        <form method="get" action="" class="form">    
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
@@ -23,13 +23,13 @@
           </div>
           <div class="govuk-radios govuk-radios--inline">
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="open-vacancies" name="open-vacancies" type="radio" value="yes~/1-0-0/gov-11">
+              <input class="govuk-radios__input" id="open-vacancies" name="open-vacancies" type="radio" value="yes~gov-11">
               <label class="govuk-label govuk-radios__label" for="open-vacancies">
                 Yes
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="open-vacancies-2" name="open-vacancies" type="radio" value="no~/1-0-0/gov-12">
+              <input class="govuk-radios__input" id="open-vacancies-2" name="open-vacancies" type="radio" value="no~gov-12">
               <label class="govuk-label govuk-radios__label" for="open-vacancies-2">
                 No
               </label>
@@ -40,10 +40,14 @@
       </div>
 
 
-
-          <button role="button" draggable="false" class="govuk-button" data-module="govuk-button">
+      <div class="govuk-button-group">
+          <button id="vacancyButton" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
             Save and continue
           </button>
+          <button id="vacancyButtonExit" role="button" draggable="false" class="govuk-button govuk-button--secondary" data-module="govuk-button">
+            Save and exit
+          </button>
+      </div>
           </form>
     </div>
 
