--- a/app/views/1-0-0/gov-13.html
+++ b/app/views/1-0-0/gov-13.html
@@ -20,7 +20,7 @@
 
     <p class="govuk-body">We have sent you a confirmation email.</p>
 
-
+    <p><a href="#">Return to home page</a></p>
 
     <h2 class="govuk-heading-m">What happens next</h2>
 
