tag colour change

--- a/app/views/1-0-0/gov-12.html
+++ b/app/views/1-0-0/gov-12.html
@@ -603,7 +603,7 @@
       <strong id="vacancyIncomplete" class="govuk-tag govuk-tag--grey float-right">
        Not started
       </strong>
-      <strong id="vacancyInProgress" class="govuk-tag govuk-tag--grey float-right">
+      <strong id="vacancyInProgress" class="govuk-tag govuk-tag--yellow float-right">
        In progress
       </strong>
 
